gcc/testsuite/rust/rustc/ui/rfc-2627-raw-dylib/feature-gate-raw-dylib.rs
#[link(name="foo", kind="raw-dylib")]
// { dg-error ".E0658." "" { target *-*-* } .-1 }
extern {}

fn main() {}

